# eegtopo

./: .gitignore  LICENSE  MANIFEST.in  README.md  channel_statistics_256_no_effect.csv  example_no_effect_256.csv  example_with_effect_256.csv  generate_eeg_data.py  publish.sh  pyproject.toml  setup.py  tutorial.ipynb
.github/workflows/: publish.yml  test.yml
eegtopo/: __init__.py  coordinates.py  dataframe_interface.py  head.py  interpolation.py  montage.py  plotting.py  statistics.py
examples/: channel_statistics_256_with_effect.csv
